# neo-oscilloscope

./: .gitignore  Cargo.toml  README.md  build.sh  package-lock.json
app/: index.html  package-lock.json  package.json
app/src/: app.js  canvas.js  events.js  handleUpload.js  nodes.js  settings.js  state.js  visualizer.js  wasm.js
app/src/.claude/: settings.local.json
app/src/automationCanvas/: automation.js  canvas.js  constants.js  events.js  init.js  playhead.js
app/src/fileHandling/: download.js  init.js  upload.js
app/src/settings/: directionPad.js  init.js  processingSettingsEvents.js  settings.js  startingPoint.js  styleSettingsEvents.js
app/src/visualizerCanvas/: canvas.js  events.js  init.js  visualizer.js
app/styles/: style.css
src/: get_requests.rs  interface.rs  lib.rs  process_requests.rs  set_requests.rs  traits.rs  utils.rs
src/audio_to_coords/: request.rs
src/backend/: mod.rs  process_request.rs  processing.rs  settings.rs  state.rs
src/coords_to_audio/: request.rs
src/image_to_coords/: algs.rs  method.rs  mod.rs  mode.rs  processing_utils.rs  request.rs  utils.rs
src/image_to_coords/methods/: black.rs  dynamic.rs  full.rs  mod.rs  outline.rs  scanline.rs  snake.rs  spread.rs  utils.rs  zigzag.rs
