[package]
name = "oscilloscope"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# Wasm 
wasm-bindgen-futures = "0.4"
getrandom = { version = "0.3", features = ["wasm_js"] }
wasm-bindgen = "0.2.84"
js-sys = "0.3.77"

# Audio 
hound = "3.5.1"
rubato = "0.14"
realfft = "3.1"

# Logging and error handling
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-wasm = "0.2"
console_error_panic_hook = "0.1"
console_log = "1.0"
log = "0.4"
anyhow = "1.0"

# Images
image = "0.25"

# Async
futures = "0.3"
gloo-timers = "0.3.0"

# Utils
paste = { version = "1.0" }
rand = "0.9"

